# rust_trading

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  rust-docs.md
.history/: .gitignore_20260222173416  .gitignore_20260223221726  Cargo_20260222171545.toml  Cargo_20260222171722.toml  Cargo_20260222192429.toml  Cargo_20260223031606.toml  Cargo_20260223032517.toml  Cargo_20260223032747.toml  Cargo_20260223182253.toml  Cargo_20260223182817.toml  Dockerfile_20260222172241  Dockerfile_20260222172452  Dockerfile_20260222174811.dev  Dockerfile_20260222210708.prod  Dockerfile_20260222211314.prod  README_20260222172916.md  README_20260222174045.md  README_20260222174120.md  README_20260222203042.md  README_20260222203101.md  README_20260223025737.md  README_20260223025756.md  README_20260223045341.md  README_20260223181236.md  README_20260223200423.md  README_20260223212718.md  docker-compose.prod_20260222205454.yml  docker-compose.prod_20260222210454.yml  docker-compose.prod_20260222210519.yml  docker-compose_20260222172314.yml  docker-compose_20260222172549.yml  docker-compose_20260222173135.yml  docker-compose_20260222173213.yml  docker-compose_20260222173219.yml  docker-compose_20260222174532.yml  docker-compose_20260222174854.yml  docker-compose_20260222175035.yml  docker-compose_20260222175158.yml  docker-compose_20260222200320.yml  docker-compose_20260222200620.yml  (+14 more)
data/: m15_features.parquet  m15_latest_50000.parquet  m5_features.parquet  m5_latest_50000.parquet  m5_streaming_features.csv
src/: binance_client.rs  main.rs  (+3 more)
(+214 files in other folders)
