[package]
name = "binance_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
url = "2"
chrono = "0.4"               # for human‑readable timestamps
